Fixed HTML and body with height: auto rather than height: 100%; They were truncating

--- a/development/scss/scss-framework/_framework.scss
+++ b/development/scss/scss-framework/_framework.scss
@@ -9,7 +9,7 @@
 .visibility-hidden { visibility: hidden;}
 
 html, body {
-  height: 100%;
+  height: auto;
 }
 
 body {
@@ -260,13 +260,15 @@ header #brand {
   position: relative;
   top: 0;
   right: 0;
-  bottom: 0;
+  bottom: -2rem;
   left: 0;
   width: 100%;
+/*
   -moz-transition: all 300ms;
   -o-transition: all 300ms;
   -webkit-transition: all 300ms;
   transition: all 300ms;
+*/
   z-index: 1;
 }
 
